<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/section_px_title" />

    <include layout="@layout/divider_px_thick" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <TextView
            android:id="@+id/call_back_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30px"
            android:singleLine="false"
            android:text="@string/call_back_alert"
            android:textColor="#666666"
            android:textSize="38px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/call_back_tv"
            android:orientation="vertical"
            android:paddingBottom="20px"
            android:paddingLeft="20px">

            <TextView
                android:id="@+id/problem_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10px"
                android:text="@string/problem_one"
                android:textColor="#479de2"
                android:textSize="34px" />

            <TextView
                android:id="@+id/problem_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10px"
                android:text="@string/problem_two"
                android:textColor="#479de2"
                android:textSize="34px" />

            <TextView
                android:id="@+id/problem_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10px"
                android:text="@string/problem_three"
                android:textColor="#479de2"
                android:textSize="34px" />

            <TextView
                android:id="@+id/problem_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10px"
                android:text="@string/problem_four"
                android:textColor="#479de2"
                android:textSize="34px" />


        </LinearLayout>

        <include layout="@layout/divider_settings" />
    </RelativeLayout>

    <include layout="@layout/divider_settings" />

    <ListView
        android:id="@+id/listView_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:padding="10px"
        android:transcriptMode="alwaysScroll" />

    <include layout="@layout/common_coment" />


</LinearLayout>